# ai-secbench

./: LICENSE.txt  README.md  pyproject.toml
ai_secbench/: __init__.py  cli.py
ai_secbench/challenges/: __init__.py  base.py
ai_secbench/challenges/cipher/: __init__.py  generator.py
ai_secbench/challenges/context_poisoning/: __init__.py  generator.py
ai_secbench/challenges/steganographic/: __init__.py  generator.py
ai_secbench/core/: __init__.py  challenge.py  config.py  evaluator.py  runner.py
ai_secbench/judge/: __init__.py
ai_secbench/providers/: __init__.py  anthropic.py  base.py  google.py  huggingface.py  openai.py  xai.py
ai_secbench/scenarios/: __init__.py
ai_secbench/utils/: __init__.py  text.py
examples/: ai_secbench_full_evaluation_example.ipynb  demo.py  demo_notebook.ipynb
tests/: __init__.py  test_challenges.py  test_evaluator.py  test_generators.py  test_providers.py  test_text_utils.py
